<?xml version="1.0" encoding="utf-8"?>
<!--
	~ This file is part of Dijon Parking <http://code.google.com/p/dijon-parking/>
	~
	~ Dijon Parking is free software: you can redistribute it and/or modify
	~ it under the terms of the GNU General Public License as published by
	~ the Free Software Foundation, either version 3 of the License, or
	~ (at your option) any later version.
	~
	~ Dijon Parking is distributed in the hope that it will be useful,
	~ but WITHOUT ANY WARRANTY; without even the implied warranty of
	~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	~ GNU General Public License for more details.
	~
	~ You should have received a copy of the GNU General Public License
	~ along with Dijon Parking.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Dijon Parking</string><string name="version_name">0.2.0</string>
    <string name="apiKey">0TEhM8-83NqGUleU2oauvbwB8xRfZI9Z_1pCkMA</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading...</string>
    <string name="network_error">A network error has occured</string>
    <string name="placelibreindispo">Information not available</string>
    <string name="placelibre">Free parking space: </string>
    <string name="placeslibres">Spaces:</string>
    <string name="internalerror">An internal error has occured</string>
    <string name="retry">Retry</string>
    <string name="quit">Close</string>
    <string name="about">À propos</string>
    <string name="descriptionabout">Application under GNU GPLv3.\nVersion under development. Bug reports and ideas are welcome.\n\nDijon Parking is not an official application of the City of Dijon\n\nThe data are supplied by the City of Dijon.</string>
    <string name="placelibreabo">Parking free subscriber:</string>
    <string name="placeslibresabo">Free parking subscribers:</string>
    <string name="placelibreaboindispo">Information not available</string>
    <string name="captotaleindispo">Total capacity unavailable</string>
    <string name="captotale">Total capacity: %d places</string>
    <string name="tarifshoraires">Hourly Rates</string>
    <string name="tarifsabo">Subscription Rates</string>
    <string name="itineraire">Directions</string>
    <string name="info">Informations</string>
    <string name="significationcouleurpoint">Meaning of the carparks color:</string>
    <string name="significationcouleurpointvert">&gt; 40%</string>
    <string name="nombreplacelibre">Number of free space:</string>
    <string name="significationcouleurpointorange">> 20 %</string>
    <string name="significationcouleurpointrouge">> 0 %</string>
    <string name="significationcouleurpointgris">Non disponible</string>
    <string-array name="tri">
        <item>Proximité</item>
        <item>Free spaces</item>
        <item>Percentage of free places</item>
    </string-array>
    <string name="tripar">Sort by...</string>
    <string name="settings">Settings</string>
    <string name="organisation">organization</string>
    <string name="nullerror">A network error has probably occured. Contact autor.</string>
    
</resources>
