<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:padding="10dip">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/nombreplacelibre" android:textSize="17dip"></TextView>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dip">
            <ImageView android:src="@drawable/redpark" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15dip" android:text="@string/significationcouleurpointrouge" android:layout_marginLeft="7dip"></TextView>
        </TableRow>
        <TableRow android:layout_marginTop="5dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/orangepark"></ImageView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/significationcouleurpointorange" android:layout_marginLeft="7dip" android:textSize="15dip"></TextView>
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5dip">
            <ImageView android:src="@drawable/greenpark" android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="15dip" android:text="@string/significationcouleurpointvert" android:layout_marginLeft="7dip"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/unpark"></ImageView>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/significationcouleurpointgris" android:layout_marginLeft="7dip" android:textSize="15dip"></TextView>
        </TableRow>
    </TableLayout>
</ScrollView>
